# font-search-api

./: .env.sample  .gitignore  Dockerfile  Dockerfile.lambda  README.md  main.py  pyproject.toml  serverless.yml
.github/workflows/: ci.yaml  lightsail_deploy.yaml  lightsail_push.yaml
app/: main.py
app/config/: constant.py  settings.py
app/domain/: entity.py  ocr.py  predictor.py  preprocess.py  transform.py
models/: font365_vgg16.pt  meta.pkl
tests/domain/: test_entity.py  test_preprocess.py  test_transform.py
